<resources>
    <string name="app_name">FRR Motorsport</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="not_registered">Belum Bergabung?</string>
    <string name="register">BERGABUNG</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sudah_bergabung">Sudah Bergabung?</string>
    <string name="welcome">Selamat Datang Bang Montir</string>
    <string name="title_activity_kerjaan">kerjaanActivity</string>

    <string-array name="merk">
        <item>Honda</item>
        <item>Yamaha</item>
        <item>Suzuki</item>
        <item>Kawasaki</item>
        <item>Vespa</item>
    </string-array>



    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
