<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="#000000"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo"
        />

    <EditText
        android:id="@+id/UsernameEditText"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/username"
        android:textColorHint="#656565"
        android:background="#fffdf9"
        android:textColor="#000000"
        android:drawableLeft="@drawable/username"
        />
    <EditText
        android:id="@+id/PasswordEditText"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:textColor="#000000"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="#656565"
        android:background="#fffdf9"
        android:drawableLeft="@drawable/password"/>
    <EditText
        android:id="@+id/Password_C_EditText"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:hint="@string/confirm_password"
        android:textColorHint="#656565"
        android:background="#fffdf9"
        android:drawableLeft="@drawable/password"/>
    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:backgroundTint="#B91B1C"
        android:textColor="#ffac41"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/sudah_bergabung"
            android:textColor="#fffdf9"/>
        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:text="@string/login"
            android:textColor="#8ac6d1"/>
    </LinearLayout>
</LinearLayout>